colibri-vf: switch to U-Boot 2014.04 and latest git
This commit switches Colibri VF machine to use the 2014.04 git
branch. The change to latest U-Boot brings proper NAND hardware
ECC support, which is also enabled in latest Linux kernel.

Beside that, burnflash is updated to correctly work with the
new U-Boot version and the altered Config Block location.

--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -14,7 +14,7 @@ SOC_FAMILY = "vf:vf60"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
-UBOOT_SUFFIX = "nand"
+UBOOT_SUFFIX = "imx"
 UBOOT_MAKE_TARGET = ""
 UBOOT_MACHINE = "colibri_vf_config"
 # note that this is a pure SW solution, don't expect GPU performance
