virtual/kernel: set preferred unconditionaly
Be consistent with the other machine recipes
Help the autobuilder setup

--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -11,7 +11,7 @@ SOC_FAMILY = "mx6:mx6q"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex-fsl"
+PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
 
 # Ensure boot scripts will be available at rootfs time
 #do_rootfs[depends] += "u-boot-script-boundary:do_deploy"
