apalis-imx6: remove unneeded variable

--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -17,7 +17,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
 #do_rootfs[depends] += "u-boot-script-boundary:do_deploy"
 
 # Boot scripts to install
-BOOT_SCRIPTS = "6x_bootscript-${MACHINE}:6x_bootscript"
+#BOOT_SCRIPTS = "6x_bootscript-${MACHINE}:6x_bootscript"
 
 UBOOT_MACHINE = "apalis_imx6q1g_config"
 
