--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -8,10 +8,10 @@ DEFAULTTUNE = "armv7ahf-neon"
 include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa5.inc
 
-#TODO
 SOC_FAMILY = "vf:vf60"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
+
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
 UBOOT_SUFFIX = "imx"
@@ -27,7 +27,7 @@ IMAGE_FSTYPES ?= "tar.bz2 ext3 sdcard"
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
-MACHINE_FEATURES = "apm usbgadget usbhost vfat ext2 alsa touchscreen ethernet wifi bluetooth 3g"
+MACHINE_FEATURES = "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
 EXTRA_IMAGEDEPENDS += "u-boot"
 
 #Workaround
