machine.conf: xserver: make sure to use machine specific
If the package manager finds a version newer than the prefered-version that one
gets installed. As we need a specific one for the tegras and for imx6 we
change the 'epoch' to something very high.

--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -13,6 +13,8 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
 
+PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
+
 # Ensure boot scripts will be available at rootfs time
 #do_rootfs[depends] += "u-boot-script-boundary:do_deploy"
 
