--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -17,6 +17,11 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
 UBOOT_SUFFIX = "imx"
 UBOOT_MAKE_TARGET = ""
 UBOOT_MACHINE = "colibri_vf_config"
+
+#All other Toradex modules require version 1.14, so stay with it also with the VF modules
+PREFERRED_PROVIDER_virtual/xserver_vf = "xserver-xorg"
+PREFERRED_VERSION_xserver-xorg_vf = "1.14%"
+
 # note that this is a pure SW solution, don't expect GPU performance
 PREFERRED_PROVIDER_virtual/mesa = "mesa"
 PREFERRED_PROVIDER_virtual/gl = "mesa"
