--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -3,10 +3,11 @@
 #@SOC: vf50 vf61
 #@DESCRIPTION: Toradex Colibri VF50, Colibri VF61
 
-#use hard float
-DEFAULTTUNE = "armv7ahf-neon"
-include conf/machine/include/imx-base.inc
-include conf/machine/include/tune-cortexa5.inc
+# meta-angstrom/conf/distro/include/arm-defaults.inc
+# unconditionally adds thumb when not qualified with machine or SOC family
+DEFAULTTUNE_vf = "armv7ahf-neon"
+require conf/machine/include/imx-base.inc
+require conf/machine/include/tune-cortexa5.inc
 
 SOC_FAMILY = "vf:vf60"
 
