apalis-imx6.conf: specify the devicetree name

--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -12,6 +12,7 @@ SOC_FAMILY = "mx6:mx6q"
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
+KERNEL_DEVICETREE = "imx6q-apalis-eval.dtb"
 
 PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
 
