systemd: don't pull in systemd 216
meta-angstrom backported systemd 2.16 into daisy. Keep using 2.11 for now.

--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -33,6 +33,9 @@ IMAGE_FSTYPES ?= "tar.bz2 ext3 sdcard"
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
+# don't pull in systemd 216 backported into meta-angstrom
+PREFERRED_VERSION_systemd = "211%"
+
 MACHINE_FEATURES = "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
 EXTRA_IMAGEDEPENDS += "u-boot"
 
