--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -16,6 +16,9 @@ KERNEL_DEVICETREE = "imx6q-apalis-eval.dtb"
 
 PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
 
+# don't pull in systemd 216 backported into meta-angstrom
+PREFERRED_VERSION_systemd = "211%"
+
 # Ensure boot scripts will be available at rootfs time
 #do_rootfs[depends] += "u-boot-script-boundary:do_deploy"
 
