colibri-vf: u-boot: switch to 2014.10
Use rebased U-Boot release 2014.10. The README has a new md5sum
and U-Boots new build system has default configurations ending
with defconfig too.

--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -16,7 +16,7 @@ KERNEL_IMAGETYPE = "zImage"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
-UBOOT_MACHINE = "colibri_vf_config"
+UBOOT_MACHINE = "colibri_vf_defconfig"
 UBOOT_SUFFIX = "imx"
 UBOOT_MAKE_TARGET = ""
 
