machines: use thumb2 with meta-angstrom
Angstrom started using thumb2 on machines with armv7-a architectures.
This commit removes our override to stay on arm instruction set, so
if building our machines with the angstrom distribution you now get
thumb2 builds.

--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -4,8 +4,7 @@
 #@DESCRIPTION: Toradex Colibri VF50, Colibri VF61
 
 # meta-angstrom/conf/distro/include/arm-defaults.inc
-# unconditionally adds thumb when not qualified with machine or SOC family
-DEFAULTTUNE_vf = "armv7ahf-neon"
+DEFAULTTUNE = "armv7ahf-neon"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa5.inc
 
