--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -3,7 +3,7 @@
 #@SOC: i.MX6
 #@DESCRIPTION: Machine configuration for Toradex Apalis iMX6 SOM
 
-DEFAULTTUNE_mx6 = "armv7ahf-neon"
+DEFAULTTUNE_mx6 = "armv7at2hf-neon"
 include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa9.inc
 
