machine: imx6: fix thumb2 arch setting

--- a/conf/machine/colibri-imx6.conf
+++ b/conf/machine/colibri-imx6.conf
@@ -3,7 +3,7 @@
 #@SOC: i.MX6 DL/S
 #@DESCRIPTION: Machine configuration for Toradex Colibri iMX6 SOM
 
-DEFAULTTUNE_mx6 = "armv7at2hf-neon"
+DEFAULTTUNE_mx6 = "armv7athf-neon"
 include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa9.inc
 
