colibri-vf: switch to mainline kernel based on 3.18
Switch default kernel recipe to linux-toradex-vf which will build
a kernel based on the toradex 3.18-next branch.

--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -10,8 +10,12 @@ require conf/machine/include/tune-cortexa5.inc
 
 SOC_FAMILY = "vf:vf60"
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex-fsl"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex-vf"
 KERNEL_IMAGETYPE = "zImage"
+KERNEL_DEVICETREE += "vf500-colibri-eval-v3.dtb vf610-colibri-eval-v3.dtb"
+
+# U-Boot reads the kernel and device tree directly from rootfs
+IMAGE_INSTALL_append = " kernel-image kernel-devicetree"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
@@ -31,7 +35,7 @@ PREFERRED_PROVIDER_virtual/libgl = "mesa"
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
 IMAGE_FSTYPES ?= "tar.bz2 ext3 sdcard"
 
-SERIAL_CONSOLE = "115200 ttymxc0"
+SERIAL_CONSOLE = "115200 ttyLP0"
 
 # don't pull in systemd 216 backported into meta-angstrom
 PREFERRED_VERSION_systemd = "211%"
