Apalis/Colibri iMX6 build kernel uImage
The default changed to zImage so explicit set uImage for now.
While at it cleanup the recipe, remove pci from Colibri machine features.

--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -1,5 +1,5 @@
 #@TYPE: Machine
-#@NAME: Toradex Apalis iMX6
+#@NAME: Toradex Apalis iMX6Q/D
 #@SOC: i.MX6
 #@DESCRIPTION: Machine configuration for Toradex Apalis iMX6 SOM
 
@@ -13,14 +13,12 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
 KERNEL_DEVICETREE = "imx6q-apalis-eval.dtb imx6q-apalis-eval_v1_0.dtb"
+KERNEL_IMAGETYPE = "uImage"
 
 PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
 
 # don't pull in systemd 216 backported into meta-angstrom
 PREFERRED_VERSION_systemd = "211%"
-
-# Ensure boot scripts will be available at rootfs time
-#do_rootfs[depends] += "u-boot-script-boundary:do_deploy"
 
 UBOOT_MACHINE = "apalis_imx6q1g_config"
 
