--- a/conf/machine/colibri-imx6.conf
+++ b/conf/machine/colibri-imx6.conf
@@ -13,18 +13,16 @@ PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
 KERNEL_DEVICETREE = "imx6dl-colibri-eval-v3.dtb"
+KERNEL_IMAGETYPE = "uImage"
 
 PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
 
 # don't pull in systemd 216 backported into meta-angstrom
 PREFERRED_VERSION_systemd = "211%"
 
-# Ensure boot scripts will be available at rootfs time
-#do_rootfs[depends] += "u-boot-script-boundary:do_deploy"
-
 UBOOT_MACHINE = "colibri_imx6s256m_config"
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
-MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g pci "
+MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
 EXTRA_IMAGEDEPENDS += "u-boot"
