Apalis/Colibri iMX6: kernel/U-Boot update to latest in -next
Also deploy an additional device tree supporting a Colibri iMX6 with
Analog Camera Module.

--- a/conf/machine/colibri-imx6.conf
+++ b/conf/machine/colibri-imx6.conf
@@ -12,7 +12,7 @@ SOC_FAMILY = "mx6:mx6dl"
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
-KERNEL_DEVICETREE = "imx6dl-colibri-eval-v3.dtb"
+KERNEL_DEVICETREE = "imx6dl-colibri-eval-v3.dtb imx6dl-colibri-cam-eval-v3.dtb"
 KERNEL_IMAGETYPE = "uImage"
 
 PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
@@ -20,7 +20,7 @@ PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
 # don't pull in systemd 216 backported into meta-angstrom
 PREFERRED_VERSION_systemd = "211%"
 
-UBOOT_MACHINE = "colibri_imx6s256m_config"
+UBOOT_MACHINE = "colibri_imx6_defconfig"
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
