--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -20,7 +20,7 @@ PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
 # don't pull in systemd 216 backported into meta-angstrom
 PREFERRED_VERSION_systemd = "211%"
 
-UBOOT_MACHINE = "apalis_imx6q1g_config"
+UBOOT_MACHINE = "apalis_imx6_defconfig"
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
