colibri_vf: use new USB gadget library
Use new library libusbg with its automatic gadget configuration
service. Also enable a console on USB gadget serial port (CDC ACM)
which is ttyGS0 on device side.

--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -35,7 +35,7 @@ PREFERRED_PROVIDER_virtual/libgl = "mesa"
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext3"
 IMAGE_FSTYPES ?= "tar.bz2 ext3 sdcard"
 
-SERIAL_CONSOLE = "115200 ttyLP0"
+SERIAL_CONSOLES = "115200;ttyLP0 115200;ttyGS0"
 
 # don't pull in systemd 216 backported into meta-angstrom
 PREFERRED_VERSION_systemd = "211%"
