--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -12,7 +12,7 @@ SOC_FAMILY = "mx6:mx6q"
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex-fsl"
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex-fsl"
-KERNEL_DEVICETREE = "imx6q-apalis-eval.dtb imx6q-apalis-eval_v1_0.dtb"
+KERNEL_DEVICETREE = "imx6q-apalis-eval.dtb imx6q-apalis_v1_0-eval.dtb"
 KERNEL_IMAGETYPE = "uImage"
 
 PREFERRED_VERSION_xserver-xorg_mx6 = "99:1.14%"
