--- a/conf/machine/colibri-vf.conf
+++ b/conf/machine/colibri-vf.conf
@@ -19,6 +19,9 @@ RDEPENDS_kernel-base = ""
 
 PREFERRED_PROVIDER_u-boot = "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
+PREFERRED_PROVIDER_virtual/kernel-module-mcc = "kernel-module-mcc-toradex"
+PREFERRED_PROVIDER_virtual/kernel-module-mcc-dev = "kernel-module-mcc-toradex"
+PREFERRED_VERSION_mqxboot = "1.%"
 
 # U-Boot NAND binary includes 0x400 padding required for NAND boot
 UBOOT_BINARY = "u-boot-nand.imx"
