apalis-imx6: enable Toradex Easy Installer image
Enable Toradex Easy Installer image for Apalis iMX6 machine. This
requires to specify the Product Id this machine supports so that
the Installer can filter the images and only show images compatible
with the module currently running on.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -25,8 +25,10 @@ UBOOT_CONFIG[spl] = "apalis_imx6_defconfig,,u-boot.img"
 UBOOT_CONFIG[recover] = "apalis_imx6_nospl_it_defconfig,,u-boot.imx"
 UBOOT_MAKE_TARGET = ""
 
-IMAGE_FSTYPES = "sdcard.gz tar.xz"
+IMAGE_CLASSES += "image_type_tezi"
+IMAGE_FSTYPES = "sdcard.gz tar.xz tezi"
 
 SERIAL_CONSOLE ?= "115200 ttymxc0"
+TORADEX_PRODUCT_IDS_apalis-imx6 = "0027 0028 0029 0035"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g pci"
