apalis/colibri-imx6: reorder U-Boot binaries to fix sdcard/tezi image
Image formats which include the U-Boot binary rely on U_BOOT_BINARY
pointing to a U-Boot binary working with SPL. U_BOOT_BINARY seems
to point to the last U-Boot binary built, hence move the "spl"
configuration to the end to make sure U_BOOT_BINARY points to the
U-Boot binary which works with SPL.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx6.conf
+++ b/conf/machine/colibri-imx6.conf
@@ -19,7 +19,9 @@ SPL_BINARY = "SPL"
 # The SPL configures the DDR RAM depending on the module it runs on. Thus there
 # is no need to distingush between the different module types.
 # For recovery mode we build a U-Boot with save timings for all known Apalis iMX6
-UBOOT_CONFIG ??= "spl recover"
+# Note: The last config will be symlinked to U_BOOT_BINARY which is crucial for
+# certain image formats.
+UBOOT_CONFIG ??= "recover spl"
 UBOOT_CONFIG[spl] = "colibri_imx6_defconfig,,u-boot.img"
 UBOOT_CONFIG[recover] = "colibri_imx6_nospl_defconfig,,u-boot.imx"
 UBOOT_MAKE_TARGET = ""
