--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -20,7 +20,9 @@ SPL_BINARY = "SPL"
 # The SPL configures the DDR RAM depending on the module it runs on. Thus there
 # is no need to distingush between the different module types.
 # For recovery mode we build a U-Boot with save timings for all known Apalis iMX6
-UBOOT_CONFIG ??= "spl recover"
+# Note: The last config will be symlinked to U_BOOT_BINARY which is crucial for
+# certain image formats.
+UBOOT_CONFIG ??= "recover spl"
 UBOOT_CONFIG[spl] = "apalis_imx6_defconfig,,u-boot.img"
 UBOOT_CONFIG[recover] = "apalis_imx6_nospl_it_defconfig,,u-boot.imx"
 UBOOT_MAKE_TARGET = ""
