colibri-imx6: enable Toradex Easy Installer image
Enable Toradex Easy Installer image for Colibri iMX6 machine. This
requires to specify the Product Id this machine supports so that
the Installer can filter the images and only show images compatible
with the module currently running on.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx6.conf
+++ b/conf/machine/colibri-imx6.conf
@@ -26,8 +26,11 @@ UBOOT_CONFIG[spl] = "colibri_imx6_defconfig,,u-boot.img"
 UBOOT_CONFIG[recover] = "colibri_imx6_nospl_defconfig,,u-boot.imx"
 UBOOT_MAKE_TARGET = ""
 
-IMAGE_FSTYPES = "sdcard.gz tar.xz"
+IMAGE_CLASSES += "image_type_tezi"
+IMAGE_FSTYPES = "sdcard.gz tar.xz tezi"
 
 SERIAL_CONSOLE ?= "115200 ttymxc0"
+
+TORADEX_PRODUCT_IDS = "0014 0015 0016 0017"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
