--- a/conf/machine/colibri-imx6.conf
+++ b/conf/machine/colibri-imx6.conf
@@ -27,7 +27,7 @@ UBOOT_CONFIG[recover] = "colibri_imx6_nospl_defconfig,,u-boot.imx"
 UBOOT_MAKE_TARGET = ""
 
 IMAGE_CLASSES += "image_type_tezi"
-IMAGE_FSTYPES = "sdcard.gz tar.xz tezi"
+IMAGE_FSTYPES = "sdcard.gz tar.xz teziimg"
 
 SERIAL_CONSOLE ?= "115200 ttymxc0"
 
