machine configs: don't deploy the kernel in /boot
In our images this has been done during do_rootfs and friends,
do it the oe-core way.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -13,6 +13,8 @@ PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex"
 KERNEL_DEVICETREE += "imx6q-apalis-eval.dtb imx6q-apalis_v1_0-eval.dtb \
                      imx6q-apalis-ixora.dtb imx6q-apalis_v1_0-ixora.dtb"
 KERNEL_IMAGETYPE = "uImage"
+# The kernel lives in a seperate FAT partition, don't deploy it in /boot/
+RDEPENDS_kernel-base = ""
 
 PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
