--- a/conf/machine/colibri-imx6.conf
+++ b/conf/machine/colibri-imx6.conf
@@ -10,7 +10,7 @@ include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa9.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex"
-KERNEL_DEVICETREE += "imx6dl-colibri-eval-v3.dtb imx6dl-colibri-cam-eval-v3.dtb"
+KERNEL_DEVICETREE += "imx6dl-colibri-eval-v3.dtb imx6dl-colibri-cam-eval-v3.dtb imx6dl-colibri-aster.dtb"
 KERNEL_IMAGETYPE = "uImage"
 # The kernel lives in a seperate FAT partition, don't deploy it in /boot/
 RDEPENDS_kernel-base = ""
