--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -22,7 +22,7 @@ SPL_BINARY = "SPL"
 # The SPL configures the DDR RAM depending on the module it runs on. Thus there
 # is no need to distingush between the different module types.
 # For recovery mode we build a U-Boot with save timings for all known Apalis iMX6
-# Note: The last config will be symlinked to U_BOOT_BINARY which is crucial for
+# Note: The last config will be symlinked to UBOOT_BINARY which is crucial for
 # certain image formats.
 UBOOT_CONFIG ??= "recover spl"
 UBOOT_CONFIG[spl] = "apalis_imx6_defconfig,,u-boot.img"
