--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -11,7 +11,8 @@ include conf/machine/include/tune-cortexa9.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex"
 KERNEL_DEVICETREE += "imx6q-apalis-eval.dtb imx6q-apalis_v1_0-eval.dtb \
-                     imx6q-apalis-ixora.dtb imx6q-apalis_v1_0-ixora.dtb"
+                     imx6q-apalis-ixora.dtb imx6q-apalis_v1_0-ixora.dtb \
+                     imx6q-apalis-ixora-v1.1.dtb"
 KERNEL_IMAGETYPE = "uImage"
 # The kernel lives in a seperate FAT partition, don't deploy it in /boot/
 RDEPENDS_kernel-base = ""
