--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -31,7 +31,7 @@ UBOOT_CONFIG[recover] = "apalis_imx6_nospl_it_defconfig,,u-boot.imx"
 UBOOT_MAKE_TARGET = ""
 
 IMAGE_CLASSES += "image_type_tezi"
-IMAGE_FSTYPES = "sdcard.gz tar.xz teziimg"
+IMAGE_FSTYPES = "tar.xz teziimg"
 
 SERIAL_CONSOLE ?= "115200 ttymxc0"
 TORADEX_PRODUCT_IDS_apalis-imx6 = "0027 0028 0029 0035"
