layer.conf: apply an include to machine.conf
Include a file to the machine configuration to amend to the upstream
$MACHINE.conf file.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,3 +22,7 @@ LAYERDEPENDS_toradex-nxp-layer = " \
     fsl-arm-extra \
     toradex-bsp-common-layer \
 "
+
+# This file need not exist, if it does it can be used to change the machine
+# configuration
+include conf/machine/include/${MACHINE}.inc
