--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -18,8 +18,13 @@ PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
 UBOOT_BINARY = "u-boot.imx"
 UBOOT_MACHINE ?= "colibri-imx6ull_defconfig"
 
-IMAGE_FSTYPES = "sdcard.gz tar.xz"
+IMAGE_CLASSES += "image_type_tezi"
+IMAGE_FSTYPES = "sdcard.gz tar.xz teziimg"
 
 SERIAL_CONSOLE ?= "115200 ttymxc0"
+
+TORADEX_PRODUCT_IDS = "0036"
+TORADEX_PRODUCT_IDS[0036] = "imx6ull-colibri-eval-v3.dtb"
+TORADEX_FLASH_TYPE = "rawnand"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
