colibri-imx6ull: use U-Boot with 1kB padding
Use u-boot-nand.imx which has a 1kB padding so it can be written
directly to flash.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -15,7 +15,8 @@ KERNEL_IMAGETYPE = "zImage"
 
 PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
-UBOOT_BINARY = "u-boot.imx"
+UBOOT_BINARY = "u-boot-nand.imx"
+UBOOT_MAKE_TARGET = "u-boot-nand.imx"
 UBOOT_MACHINE ?= "colibri-imx6ull_defconfig"
 
 IMAGE_CLASSES += "image_type_tezi"
