apalis/colibri-imx6.conf/colibri-imx7-emmc.conf: payload offsets
Prepare for configurable boot ROM and SPL payload offsets to be applied
to resp. image.json for Toradex Easy Installer.

Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
Acked-by: Stefan Agner <stefan.agner@toradex.com>

--- a/conf/machine/colibri-imx7-emmc.conf
+++ b/conf/machine/colibri-imx7-emmc.conf
@@ -20,6 +20,8 @@ PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
 
 UBOOT_MACHINE ?= "colibri_imx7_emmc_defconfig"
+# The payload offsets are given in number of 512 byte blocks.
+OFFSET_BOOTROM_PAYLOAD = "2"
 
 IMAGE_CLASSES += "image_type_tezi"
 IMAGE_FSTYPES = "sdcard.gz tar.xz teziimg"
