--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -29,6 +29,9 @@ UBOOT_CONFIG ??= "recover spl"
 UBOOT_CONFIG[spl] = "apalis_imx6_defconfig,,u-boot.img"
 UBOOT_CONFIG[recover] = "apalis_imx6_nospl_it_defconfig,,u-boot.imx"
 UBOOT_MAKE_TARGET = ""
+# The payload offsets are given in number of 512 byte blocks.
+OFFSET_BOOTROM_PAYLOAD = "2"
+OFFSET_SPL_PAYLOAD = "138"
 
 IMAGE_CLASSES += "image_type_tezi"
 IMAGE_FSTYPES = "tar.xz teziimg"
