colibri-imx6ull: don't deploy the kernel in the rootfs
The kernel lives in its own ubi volume. Save the space in the rootfs.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Stefan Agner <stefan.agner@toradex.com>

--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -12,6 +12,8 @@ include conf/machine/include/tune-cortexa7.inc
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex"
 KERNEL_DEVICETREE += "imx6ull-colibri-eval-v3.dtb"
 KERNEL_IMAGETYPE = "zImage"
+# The kernel lives in its own ubi volume.
+RDEPENDS_kernel-base = ""
 
 PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
