colibri-imx6ull: don't deploy the epdc firmware
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Stefan Agner <stefan.agner@toradex.com>

--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -31,3 +31,4 @@ TORADEX_PRODUCT_IDS[0036] = "imx6ull-colibri-eval-v3.dtb"
 TORADEX_FLASH_TYPE = "rawnand"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
+MACHINE_FIRMWARE_remove = "firmware-imx-epdc"
