colibri-imx6ull: prepare for upstreaming to fslc
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
 #@NAME: Toradex Colibri iMX6ULL
-#@SOC: i.MX6 ULL
+#@SOC: i.MX6ULL
 #@DESCRIPTION: Machine configuration for Toradex Colibri iMX6 ULL SOM
 #@MAINTAINER: Max Krummenacher <max.krummenacher@toradex.com>
 
@@ -21,15 +21,12 @@ UBOOT_BINARY = "u-boot-nand.imx"
 UBOOT_MAKE_TARGET = "u-boot-nand.imx"
 UBOOT_MACHINE ?= "colibri-imx6ull_defconfig"
 
-IMAGE_CLASSES += "image_type_tezi"
-IMAGE_FSTYPES = "sdcard.gz tar.xz teziimg"
+IMAGE_FSTYPES = "wic.gz tar.xz"
+# wic support
+WKS_FILE = "sdimage-bootpart.wks"
+WIC_CREATE_EXTRA_ARGS_append = " --no-fstab-update"
 
 SERIAL_CONSOLE ?= "115200 ttymxc0"
-
-TORADEX_PRODUCT_IDS = "0036 0040"
-TORADEX_PRODUCT_IDS[0036] = "imx6ull-colibri-eval-v3.dtb"
-TORADEX_PRODUCT_IDS[0040] = "imx6ull-colibri-wifi-eval-v3.dtb"
-TORADEX_FLASH_TYPE = "rawnand"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
 MACHINE_FIRMWARE_remove = "firmware-imx-epdc"
