--- a/conf/machine/colibri-imx7-emmc.conf
+++ b/conf/machine/colibri-imx7-emmc.conf
@@ -18,17 +18,13 @@ RDEPENDS_kernel-base = ""
 
 PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
-
 UBOOT_MACHINE ?= "colibri_imx7_emmc_defconfig"
-# The payload offsets are given in number of 512 byte blocks.
-OFFSET_BOOTROM_PAYLOAD = "2"
 
-IMAGE_CLASSES += "image_type_tezi"
-IMAGE_FSTYPES = "sdcard.gz tar.xz teziimg"
+IMAGE_FSTYPES = "wic.gz tar.xz"
+# wic support
+WKS_FILE = "sdimage-bootpart.wks"
+WIC_CREATE_EXTRA_ARGS_append = " --no-fstab-update"
 
 SERIAL_CONSOLE = "115200 ttymxc0"
-
-TORADEX_PRODUCT_IDS = "0039"
-TORADEX_FLASH_TYPE = "emmc"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
