colibri-imx6ull.conf: add dtb for wifi variant
Build and deploy the device tree for the Colibri iMX6ULL 512MB Wi-Fi / BT.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Stefan Agner <stefan.agner@toradex.com>

--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -10,7 +10,7 @@ include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex"
-KERNEL_DEVICETREE += "imx6ull-colibri-eval-v3.dtb"
+KERNEL_DEVICETREE += "imx6ull-colibri-eval-v3.dtb imx6ull-colibri-wifi-eval-v3.dtb"
 KERNEL_IMAGETYPE = "zImage"
 # The kernel lives in its own ubi volume.
 RDEPENDS_kernel-base = ""
@@ -26,8 +26,9 @@ IMAGE_FSTYPES = "sdcard.gz tar.xz teziimg"
 
 SERIAL_CONSOLE ?= "115200 ttymxc0"
 
-TORADEX_PRODUCT_IDS = "0036"
+TORADEX_PRODUCT_IDS = "0036 0040"
 TORADEX_PRODUCT_IDS[0036] = "imx6ull-colibri-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0040] = "imx6ull-colibri-wifi-eval-v3.dtb"
 TORADEX_FLASH_TYPE = "rawnand"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
