--- a/conf/machine/colibri-imx7-emmc.conf
+++ b/conf/machine/colibri-imx7-emmc.conf
@@ -14,7 +14,7 @@ KERNEL_IMAGETYPE = "zImage"
 KERNEL_DEVICETREE += "imx7d-colibri-emmc-eval-v3.dtb imx7d-colibri-emmc-aster.dtb"
 
 # The kernel lives in a seperate FAT partition, don't deploy it in /boot/
-RDEPENDS_kernel-base = ""
+RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 
 PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
