imx-loader: fix imx_usb configuration files
The string "header" refers to which imx header the utility should
try to use. Some binaries seem to have 2 headers, and header2
refers to the second.

Our binaries have only 1 header, but imx_usb seems to fall back in
that case. This might not be the case with newer imx_usb utilities.

Specifying just "header" is correct and works in all version of
imx_usb.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/recipes-devtools/imx-loader/imx-loader/mx7_usb_rom.conf
+++ b/recipes-devtools/imx-loader/imx-loader/mx7_usb_rom.conf
@@ -2,4 +2,4 @@ mx7
 #hid/bulk,[old_header,]max packet size, {ram start, ram size}(repeat valid ram areas)
 hid,1024,0x910000,0x80000000,1G,0x00900000,0x20000
 #[specify file with valid IVT]
-u-boot.imx:dcd,jump header2
+u-boot.imx:dcd,jump header
