--- a/recipes-devtools/imx-loader/imx-loader/mx6_usb_rom.conf
+++ b/recipes-devtools/imx-loader/imx-loader/mx6_usb_rom.conf
@@ -2,4 +2,4 @@ mx6_qsb
 #hid/bulk,[old_header,]max packet size, {ram start, ram size}(repeat valid ram areas)
 hid,1024,0x910000,0x10000000,1G,0x00900000,0x40000
 #[specify file with valid IVT]
-SPL:jump header2
+SPL:jump header
