--- a/recipes-devtools/imx-loader/imx-loader/mx6ull_usb_rom.conf
+++ b/recipes-devtools/imx-loader/imx-loader/mx6ull_usb_rom.conf
@@ -2,4 +2,4 @@ mx6ull
 #hid/bulk,[old_header,]max packet size, {ram start, ram size}(repeat valid ram areas)
 hid,1024,0x910000,0x80000000,1G,0x00900000,0x20000
 #[specify file with valid IVT]
-u-boot-nand.imx:dcd,jump header2
+u-boot-nand.imx:dcd,jump header
