--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -22,3 +22,4 @@ LAYERDEPENDS_toradex-nxp-layer = " \
     fsl-arm-extra \
     toradex-bsp-common-layer \
 "
+LAYERSERIES_COMPAT_toradex-nxp-layer = "sumo thud"
