--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -26,9 +26,10 @@ IMAGE_FSTYPES = "sdcard.gz tar.xz teziimg"
 
 SERIAL_CONSOLE ?= "115200 ttymxc0"
 
-TORADEX_PRODUCT_IDS = "0036 0040"
+TORADEX_PRODUCT_IDS = "0036 0040 0044"
 TORADEX_PRODUCT_IDS[0036] = "imx6ull-colibri-eval-v3.dtb"
 TORADEX_PRODUCT_IDS[0040] = "imx6ull-colibri-wifi-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0044] = "imx6ull-colibri-eval-v3.dtb"
 TORADEX_FLASH_TYPE = "rawnand"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
