--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -10,7 +10,10 @@ include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex"
-KERNEL_DEVICETREE += "imx6ull-colibri-eval-v3.dtb imx6ull-colibri-wifi-eval-v3.dtb"
+KERNEL_DEVICETREE += " \
+    imx6ull-colibri-eval-v3.dtb imx6ull-colibri-wifi-eval-v3.dtb \
+    imx6ull-colibri-aster.dtb imx6ull-colibri-wifi-aster.dtb \
+"
 KERNEL_IMAGETYPE = "zImage"
 # The kernel lives in its own ubi volume.
 RDEPENDS_kernel-base = ""
