--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -29,7 +29,7 @@ IMAGE_FSTYPES = "wic.gz tar.xz"
 WKS_FILE = "sdimage-bootpart.wks"
 WIC_CREATE_EXTRA_ARGS_append = " --no-fstab-update"
 
-SERIAL_CONSOLE ?= "115200 ttymxc0"
+SERIAL_CONSOLES = "115200;ttymxc0"
 
 MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g"
 MACHINE_FIRMWARE_remove = "firmware-imx-epdc"
