--- a/conf/machine/colibri-imx6-mainline.conf
+++ b/conf/machine/colibri-imx6-mainline.conf
@@ -1,3 +1,4 @@
 MACHINEOVERRIDES .= ":colibri-imx6:use-mainline-bsp"
 require conf/machine/colibri-imx6.conf
+require conf/machine/include/colibri-imx6.inc
 UBOOT_SUFFIX_use-mainline-bsp = "img"
