apalis-imx6-mainline: include also the .inc file
This re-enables building the Toradex Easy Installer image type.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx6-mainline.conf
+++ b/conf/machine/apalis-imx6-mainline.conf
@@ -1,3 +1,4 @@
 MACHINEOVERRIDES .= ":apalis-imx6:use-mainline-bsp"
 require conf/machine/apalis-imx6.conf
+include conf/machine/include/apalis-imx6.inc
 UBOOT_SUFFIX_use-mainline-bsp = "img"
