conf: machine: fix image_fstype for colibri-imx6ull and colibri-imx7-emmc
With the move to use '+=' in the assignment the parsing order of the
files matters, as assignments with '=' will delete all previously
parsed '+=' assignments.
Change all assignments to '+='.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -24,7 +24,7 @@ UBOOT_BINARY = "u-boot-nand.imx"
 UBOOT_MAKE_TARGET = "u-boot-nand.imx"
 UBOOT_MACHINE ?= "colibri-imx6ull_defconfig"
 
-IMAGE_FSTYPES = "wic.gz tar.xz"
+IMAGE_FSTYPES += "wic.gz tar.xz"
 # wic support
 WKS_FILE = "sdimage-bootpart.wks"
 WIC_CREATE_EXTRA_ARGS_append = " --no-fstab-update"
