--- a/conf/machine/colibri-imx7-emmc.conf
+++ b/conf/machine/colibri-imx7-emmc.conf
@@ -20,7 +20,7 @@ PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
 UBOOT_MACHINE ?= "colibri_imx7_emmc_defconfig"
 
-IMAGE_FSTYPES = "wic.gz tar.xz"
+IMAGE_FSTYPES += "wic.gz tar.xz"
 # wic support
 WKS_FILE = "sdimage-bootpart.wks"
 WIC_CREATE_EXTRA_ARGS_append = " --no-fstab-update"
