--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -34,8 +34,8 @@ IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
 IMX_BOOT_SEEK_mx8qma0 = "33"
 
-IMAGE_BOOTFILES_DEPENDS += "firmware-imx:do_deploy"
-IMAGE_BOOTFILES += "hdmitxfw.bin dpfw.bin"
+EXTRA_IMAGEDEPENDS += "firmware-imx-8"
+IMAGE_BOOT_FILES += "hdmitxfw.bin dpfw.bin"
 
 SDCARD_GENERATION_COMMAND_mx8 = "generate_imx_sdcard"
 
