machines: mx8: deploy vpu firmware
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -44,6 +44,7 @@ PREFERRED_PROVIDER_virtual/bootloader_mx8 = "u-boot-toradex"
 SOC_UAPI_HEADERS_mx8 = "linux-toradex-soc-headers"
 
 MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
+MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "${@bb.utils.contains('UBOOT_CONFIG', 'fspi', 'flash_b0_flexspi', \
                                                                  'flash_b0', d)}"
