--- a/conf/machine/colibri-imx8qxp.conf
+++ b/conf/machine/colibri-imx8qxp.conf
@@ -41,6 +41,7 @@ PREFERRED_PROVIDER_virtual/bootloader_mx8 = "u-boot-toradex"
 SOC_UAPI_HEADERS_mx8 = "linux-toradex-soc-headers"
 
 MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
+MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "${@bb.utils.contains('UBOOT_CONFIG', 'fspi', 'flash_flexspi', \
                                                                 'flash_all flash', d)}"
