imx: update to 4.14.78_1.0.0_ga bsp
Update the components which NXP forked or provides to the version
used in the 4.14.78_1.0.0_ga BSP.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -50,5 +50,9 @@ IMXBOOT_TARGETS_mx8qma0 = "${@bb.utils.contains('UBOOT_CONFIG', 'fspi', 'flash_f
                        bb.utils.contains('UBOOT_CONFIG', 'nand', 'flash_nand', \
                                                                  'flash_dcd', d), d)}"
 
+PREFERRED_PROVIDER_virtual/libg2d_imxdpu = "imx-dpu-g2d"
+PREFERRED_VERSION_wayland-protocols_mx8 = "1.16.imx"
+PREFERRED_VERSION_weston_mx8 = "5.0.0.imx"
+
 BOARD_TYPE = "apalis"
 BOARD_TYPE_mx8qma0 = "a0-apalis"
