--- a/conf/machine/colibri-imx8qxp.conf
+++ b/conf/machine/colibri-imx8qxp.conf
@@ -45,5 +45,8 @@ MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 IMXBOOT_TARGETS = "${@bb.utils.contains('UBOOT_CONFIG', 'fspi', 'flash_flexspi', \
                                                                 'flash_all flash', d)}"
 
-BOARD_TYPE = "colibri"
+PREFERRED_PROVIDER_virtual/libg2d_imxdpu = "imx-dpu-g2d"
+PREFERRED_VERSION_wayland-protocols_mx8 = "1.16.imx"
+PREFERRED_VERSION_weston_mx8 = "5.0.0.imx"
 
+BOARD_TYPE = "colibri"
