alsa-state: follow card rename in the apalis-imx8 kernel
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/recipes-bsp/alsa-state/alsa-state/apalis-imx8/asound.conf
+++ b/recipes-bsp/alsa-state/alsa-state/apalis-imx8/asound.conf
@@ -2,7 +2,7 @@ defaults.pcm.rate_converter "linear"
 
 pcm.default_card{
 type hw
-card "imx8qmsgtl5000"
+card "apalisimx8qmsgt"
 }
 
 pcm.dmix_48000{
@@ -240,11 +240,11 @@ slave.pcm "asymed"
 
 ctl.!default{
 type hw
-card "imx8qmsgtl5000"
+card "apalisimx8qmsgt"
 }
 
 ctl.mixer0{
 type hw
-card "imx8qmsgtl5000"
+card "apalisimx8qmsgt"
 }
 
