--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -56,3 +56,16 @@ PREFERRED_VERSION_weston_mx8 = "5.0.0.imx"
 
 BOARD_TYPE = "apalis"
 BOARD_TYPE_mx8qma0 = "a0-apalis"
+
+IMAGE_CLASSES_append = " image_type_tezi"
+IMAGE_FSTYPES += "teziimg"
+
+# The imx-boot container takes care for the i.MX 8 offset, so the container
+# has to be flashed at offset 0 directly
+UBOOT_BINARY_TEZI_EMMC="imx-boot"
+OFFSET_BOOTROM_PAYLOAD="0"
+do_image_teziimg[depends] += "imx-boot:do_deploy"
+do_image_teziimg_distro[depends] += "imx-boot:do_deploy"
+
+TORADEX_PRODUCT_IDS = "0037"
+TORADEX_PRODUCT_IDS[0037] = "fsl-imx8qm-apalis.dtb"
