--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -21,7 +21,7 @@ RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
 UBOOT_BINARY = "u-boot-nand.imx"
-UBOOT_MAKE_TARGET = "u-boot-nand.imx"
+UBOOT_MAKE_TARGET = "u-boot.imx"
 UBOOT_MACHINE ?= "colibri-imx6ull_defconfig"
 
 IMAGE_FSTYPES += "wic.gz tar.xz"
