machines: provide a machine name string
Provide the MACHINE_NAME variable which can be e.g. used as part of the
image name.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -3,6 +3,8 @@
 #@DESCRIPTION: Apalis iMX8 powered by a i.MX 8QuadMax SoC
 #@MAINTAINER: Stefan Agner <stefan.agner@toradex.com>
 
+MACHINE_NAME = "Apalis-iMX8"
+
 SOC_SILICON_REV ?= ""
 
 MACHINEOVERRIDES =. "mx8:mx8qm:${@bb.utils.contains('SOC_SILICON_REV', 'a0', 'mx8qma0:', '', d)}"
