--- a/conf/machine/colibri-imx6-mainline.conf
+++ b/conf/machine/colibri-imx6-mainline.conf
@@ -1,4 +1,5 @@
 MACHINEOVERRIDES .= ":colibri-imx6:use-mainline-bsp"
 require conf/machine/colibri-imx6.conf
 require conf/machine/include/colibri-imx6.inc
+MACHINE_NAME = "Colibri-iMX6-Mainline"
 UBOOT_SUFFIX_use-mainline-bsp = "img"
