--- a/conf/machine/colibri-imx8qxp.conf
+++ b/conf/machine/colibri-imx8qxp.conf
@@ -3,6 +3,8 @@
 #@DESCRIPTION: Colibri iMX8QXP powered by a i.MX 8QXP SoC
 #@MAINTAINER: Max Krummenacher <max.krummenacherr@toradex.com>
 
+MACHINE_NAME = "Colibri-iMX8QXP"
+
 MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:"
 
 require conf/machine/include/imx-base.inc
