colibri-imx8qxp: add Tezi support
Add information required to build a Toradex Easy Installer image.
Only support the main SKU Colibri iMX8 QuadXPlus 2GB Wi-Fi / BT IT
for now since we do not know yet if the other SKU's need a special
device tree or other adjustments.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>

--- a/conf/machine/colibri-imx8qxp.conf
+++ b/conf/machine/colibri-imx8qxp.conf
@@ -50,3 +50,16 @@ PREFERRED_VERSION_wayland-protocols_mx8 = "1.16.imx"
 PREFERRED_VERSION_weston_mx8 = "5.0.0.imx"
 
 BOARD_TYPE = "colibri"
+
+IMAGE_CLASSES_append = " image_type_tezi"
+IMAGE_FSTYPES += "teziimg"
+
+# The imx-boot container takes care for the i.MX 8 offset, so the container
+# has to be flashed at offset 0 directly
+UBOOT_BINARY_TEZI_EMMC="imx-boot"
+OFFSET_BOOTROM_PAYLOAD="0"
+do_image_teziimg[depends] += "imx-boot:do_deploy"
+do_image_teziimg_distro[depends] += "imx-boot:do_deploy"
+
+TORADEX_PRODUCT_IDS = "0038"
+TORADEX_PRODUCT_IDS[0038] = "fsl-imx8qxp-colibri-eval-v3.dtb"
