apalis-imx8.conf: add hdmi fw also to tezi images
Use the now available MACHINE_BOOT_FILES variable to deploy the HDMI
firmware into the boot partition.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -41,7 +41,8 @@ IMX_BOOT_SEEK = "32"
 IMX_BOOT_SEEK_mx8qma0 = "33"
 
 EXTRA_IMAGEDEPENDS += "firmware-imx-8"
-IMAGE_BOOT_FILES += "hdmitxfw.bin dpfw.bin"
+IMAGE_BOOT_FILES += "${MACHINE_BOOT_FILES}"
+MACHINE_BOOT_FILES = "hdmitxfw.bin dpfw.bin"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
