--- a/conf/machine/colibri-imx8qxp.conf
+++ b/conf/machine/colibri-imx8qxp.conf
@@ -36,7 +36,7 @@ IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 
 MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
