--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -47,12 +47,9 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
-IMXBOOT_TARGETS = "${@bb.utils.contains('UBOOT_CONFIG', 'fspi', 'flash_b0_flexspi', \
-                                                                'flash_b0', d)}"
+IMXBOOT_TARGETS = "flash_b0"
 
-IMXBOOT_TARGETS_mx8qma0 = "${@bb.utils.contains('UBOOT_CONFIG', 'fspi', 'flash_flexspi', \
-                       bb.utils.contains('UBOOT_CONFIG', 'nand', 'flash_nand', \
-                                                                 'flash_dcd', d), d)}"
+IMXBOOT_TARGETS_mx8qma0 = "flash_dcd"
 
 PREFERRED_PROVIDER_virtual/libg2d_imxdpu = "imx-dpu-g2d"
 PREFERRED_VERSION_wayland-protocols_mx8 = "1.16.imx"
