--- a/conf/machine/colibri-imx8qxp.conf
+++ b/conf/machine/colibri-imx8qxp.conf
@@ -41,8 +41,7 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
-IMXBOOT_TARGETS = "${@bb.utils.contains('UBOOT_CONFIG', 'fspi', 'flash_flexspi', \
-                                                                'flash_all flash', d)}"
+IMXBOOT_TARGETS = "flash"
 
 PREFERRED_PROVIDER_virtual/libg2d_imxdpu = "imx-dpu-g2d"
 PREFERRED_VERSION_wayland-protocols_mx8 = "1.16.imx"
