--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -11,7 +11,7 @@ MACHINE_NAME = "Apalis-iMX8"
 
 SOC_SILICON_REV ?= ""
 
-MACHINEOVERRIDES =. "mx8:mx8qm:${@bb.utils.contains('SOC_SILICON_REV', 'a0', 'mx8qma0:', '', d)}"
+MACHINEOVERRIDES =. "mx8:mx8qm:"
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/arch-arm64.inc
@@ -35,7 +35,6 @@ UBOOT_CONFIG[sd] = "apalis-imx8_config,sdcard"
 BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
-IMX_BOOT_SEEK_mx8qma0 = "33"
 
 EXTRA_IMAGEDEPENDS += "firmware-imx-8"
 IMAGE_BOOT_FILES += "${MACHINE_BOOT_FILES}"
@@ -49,14 +48,11 @@ MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash_b0"
 
-IMXBOOT_TARGETS_mx8qma0 = "flash_dcd"
-
 PREFERRED_PROVIDER_virtual/libg2d_imxdpu = "imx-dpu-g2d"
 PREFERRED_VERSION_wayland-protocols_mx8 = "1.16.imx"
 PREFERRED_VERSION_weston_mx8 = "5.0.0.imx"
 
 BOARD_TYPE = "apalis"
-BOARD_TYPE_mx8qma0 = "a0-apalis"
 
 IMAGE_CLASSES_append = " image_type_tezi"
 IMAGE_FSTYPES += "teziimg"
