apalis-imx8: add additional product numbers
Add the product numbers of additional Apalis iMX8 SKUs.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -64,5 +64,8 @@ OFFSET_BOOTROM_PAYLOAD="0"
 do_image_teziimg[depends] += "imx-boot:do_deploy"
 do_image_teziimg_distro[depends] += "imx-boot:do_deploy"
 
-TORADEX_PRODUCT_IDS = "0037"
+TORADEX_PRODUCT_IDS = "0037 0047 0048 0049"
 TORADEX_PRODUCT_IDS[0037] = "fsl-imx8qm-apalis.dtb"
+TORADEX_PRODUCT_IDS[0047] = "fsl-imx8qm-apalis.dtb"
+TORADEX_PRODUCT_IDS[0048] = "fsl-imx8qm-apalis.dtb"
+TORADEX_PRODUCT_IDS[0049] = "fsl-imx8qm-apalis.dtb"
