colibri-imx8x: add additional product numbers
Add the product numbers of additional Colibri iMX8X SKUs.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -59,5 +59,8 @@ OFFSET_BOOTROM_PAYLOAD="0"
 do_image_teziimg[depends] += "imx-boot:do_deploy"
 do_image_teziimg_distro[depends] += "imx-boot:do_deploy"
 
-TORADEX_PRODUCT_IDS = "0038"
+TORADEX_PRODUCT_IDS = "0038 0050 0051 0052"
 TORADEX_PRODUCT_IDS[0038] = "fsl-imx8qxp-colibri-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0050] = "fsl-imx8qxp-colibri-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0051] = "fsl-imx8qxp-colibri-eval-v3.dtb"
+TORADEX_PRODUCT_IDS[0052] = "fsl-imx8qxp-colibri-eval-v3.dtb"
