colibri-imx8x: follow changed machine name
Since we changed the machine configuration name, follow with the description
and the prefix to the image names.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -1,9 +1,9 @@
 #@TYPE: Machine
-#@NAME: Colibri iMX8QXP
-#@DESCRIPTION: Colibri iMX8QXP powered by a i.MX 8QXP SoC
+#@NAME: Colibri iMX8X
+#@DESCRIPTION: Colibri iMX8X powered by a i.MX 8X SoC
 #@MAINTAINER: Max Krummenacher <max.krummenacherr@toradex.com>
 
-MACHINE_NAME = "Colibri-iMX8QXP"
+MACHINE_NAME = "Colibri-iMX8X"
 
 MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:"
 
