--- a/recipes-bsp/u-boot/files/vf/fw_env.config
+++ b/recipes-bsp/u-boot/files/vf/fw_env.config
@@ -5,18 +5,6 @@
 # Futhermore, if the Flash sector size is ommitted, this value is assumed to
 # be the same as the Environment size, which is valid for NOR and SPI-dataflash
 
-# NOR example
 # MTD device name	Device offset	Env. size	Flash sector size	Number of sectors
-#/dev/mtd1		0x0000		0x4000		0x4000
-#/dev/mtd2		0x0000		0x4000		0x4000
-
-# MTD SPI-dataflash example
-# MTD device name	Device offset	Env. size	Flash sector size	Number of sectors
-#/dev/mtd5		0x4200		0x4200
-#/dev/mtd6		0x4200		0x4200
-
-# NAND example
-#/dev/mtd0		0x4000		0x4000		0x20000			2
-
-# Block device example
-#/dev/mmcblk0		0xc0000		0x20000
+# Colibri VF61
+/dev/mtd2		0x00000000	0x00020000	0x20000			4
