apalis-imx8: prefer u-boot 2018.03
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -42,6 +42,10 @@ MACHINE_BOOT_FILES = "hdmitxfw.bin dpfw.bin"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
+# Currently we use the nxp 2018.03 downstream for mx8 as some features are
+# not yet available in 2019.03.
+PREFERRED_VERSION_u-boot-toradex = "2018.03"
+PREFERRED_VERSION_u-boot-toradex-fw-utils = "2018.03"
 
 MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
