u-boot-fw-utils: choose flavour though prefered provider
This allows to use u-boot-fw-utils in image recipes.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -42,6 +42,7 @@ MACHINE_BOOT_FILES = "hdmitxfw.bin dpfw.bin"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
+PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-toradex-fw-utils"
 # Currently we use the nxp 2018.03 downstream for mx8 as some features are
 # not yet available in 2019.03.
 PREFERRED_VERSION_u-boot-toradex = "2018.03"
