--- a/conf/machine/colibri-imx7-emmc.conf
+++ b/conf/machine/colibri-imx7-emmc.conf
@@ -18,6 +18,7 @@ RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
 
 PREFERRED_PROVIDER_u-boot ?= "u-boot-toradex"
 PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-toradex"
+PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-toradex-fw-utils"
 UBOOT_MACHINE ?= "colibri_imx7_emmc_defconfig"
 
 IMAGE_FSTYPES += "wic.gz tar.xz"
