machines: deploy a distro boot script
This depends on and deploys the distro boot script provided
by u-boot-distro-boot.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -36,9 +36,9 @@ BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
 
-EXTRA_IMAGEDEPENDS += "firmware-imx-8"
+EXTRA_IMAGEDEPENDS += "firmware-imx-8 u-boot-distro-boot"
 IMAGE_BOOT_FILES += "${MACHINE_BOOT_FILES}"
-MACHINE_BOOT_FILES = "hdmitxfw.bin dpfw.bin"
+MACHINE_BOOT_FILES = "boot.scr hdmitxfw.bin dpfw.bin"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
