--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -35,6 +35,10 @@ BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
 
+EXTRA_IMAGEDEPENDS += "u-boot-distro-boot"
+IMAGE_BOOT_FILES += "${MACHINE_BOOT_FILES}"
+MACHINE_BOOT_FILES = "boot.scr"
+
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-toradex-fw-utils"
