meta: drop useless EXTRA_IMAGEDEPENDS
For the recipes listed in EXTRA_IMAGEDEPENDS, bitbake would create a
dependency as:
| image_pn:do_image_complete -> imagedepends_pn:do_populate_sysroot

but we actually need a image task depend on the deploy tasks of
EXTRA_IMAGEDEPENDS recipes, setting EXTRA_IMAGEDEPENDS would not help
with that, so drop it, use WKS_FILE_DEPENDS instead.

Signed-off-by: Ming Liu <ming.liu@toradex.com>

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -35,9 +35,9 @@ BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
 
-EXTRA_IMAGEDEPENDS += "u-boot-distro-boot"
-IMAGE_BOOT_FILES += "${MACHINE_BOOT_FILES}"
 MACHINE_BOOT_FILES = "boot.scr"
+IMAGE_BOOT_FILES_append = " ${MACHINE_BOOT_FILES}"
+WKS_FILE_DEPENDS_append = " u-boot-distro-boot"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-toradex"
