--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -24,6 +24,7 @@ KERNEL_DEVICETREE = " \
     freescale/fsl-imx8qxp-colibri-dsihdmi-eval-v3.dtb \
     freescale/fsl-imx8qxp-colibri-lvds-dual-eval-v3.dtb \
     freescale/fsl-imx8qxp-colibri-lvds-single-eval-v3.dtb \
+    freescale/fsl-imx8qxp-colibri-aster.dtb \
 "
 
 UBOOT_MAKE_TARGET = "u-boot.bin"
