--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -44,7 +44,7 @@ PREFERRED_PROVIDER_u-boot-fw-utils ?= "u-boot-toradex-fw-utils"
 PREFERRED_VERSION_u-boot-toradex = "2018.03"
 PREFERRED_VERSION_u-boot-toradex-fw-utils = "2018.03"
 
-MACHINE_FIRMWARE_append = " linux-firmware-pcie8997"
+MACHINE_FIRMWARE_append = " linux-firmware-usb8997"
 MACHINE_FIRMWARE_append = " firmware-imx-vpu-imx8"
 
 IMXBOOT_TARGETS = "flash"
