machine: apalis-imx8x: use new u-boot-config name
Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>

--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -26,7 +26,7 @@ KERNEL_DEVICETREE = " \
 UBOOT_MAKE_TARGET = "u-boot.bin"
 UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "apalis-imx8qxp_config,sdcard"
+UBOOT_CONFIG[sd] = "apalis-imx8x_config,sdcard"
 
 BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
