machine: apalis-imx8: use newer devicetree only for use-head-next
This commit makes sure the new devicetree naming is only used when
use-head-next is given in local.conf. This is necessary so one is
able to build thud-next without use-head-next.

Signed-off-by: Philippe Schenker <philippe.schenker@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -25,7 +25,8 @@ LOADADDR = ""
 # auto-serial-console there
 USE_VT = "0"
 
-KERNEL_DEVICETREE = "freescale/fsl-imx8qm-apalis-eval.dtb"
+KERNEL_DEVICETREE_use-head-next = "freescale/fsl-imx8qm-apalis-eval.dtb"
+KERNEL_DEVICETREE = "freescale/fsl-imx8qm-apalis.dtb"
 
 UBOOT_MAKE_TARGET = "u-boot.bin"
 UBOOT_SUFFIX = "bin"
