machines: unify name and description
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: Apalis iMX8
-#@DESCRIPTION: Apalis iMX8 powered by a i.MX 8QuadMax SoC
+#@NAME: Toradex Apalis iMX8
+#@DESCRIPTION: Toradex Apalis iMX8 powered by a i.MX 8QuadMax SoC
 #@MAINTAINER: Stefan Agner <stefan.agner@toradex.com>
 
 # until we get it from meta-freescale
