--- a/conf/machine/apalis-imx8x.conf
+++ b/conf/machine/apalis-imx8x.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: Apalis iMX8X
-#@DESCRIPTION: Apalis iMX8X powered by a i.MX 8X SoC
+#@NAME: Toradex Apalis iMX8X
+#@DESCRIPTION: Toradex Apalis iMX8X powered by a i.MX 8X SoC
 #@MAINTAINER: Philippe Schenker <philippe.schenker@toradex.com>
 
 MACHINE_NAME = "Apalis-iMX8X"
