--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -1,6 +1,6 @@
 #@TYPE: Machine
-#@NAME: Colibri iMX8X
-#@DESCRIPTION: Colibri iMX8X powered by a i.MX 8X SoC
+#@NAME: Toradex Colibri iMX8X
+#@DESCRIPTION: Toradex Colibri iMX8X powered by a i.MX 8X SoC
 #@MAINTAINER: Max Krummenacher <max.krummenacherr@toradex.com>
 
 MACHINE_NAME = "Colibri-iMX8X"
