verdin-imx8mm.conf: define serial console
Without this a getty on the non existing ttyS0 gets additionally started
which then fails and gets continously restarted.

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -41,6 +41,8 @@ UBOOT_SUFFIX = "bin"
 UBOOT_MAKE_TARGET = ""
 IMX_BOOT_SEEK = "33"
 
+SERIAL_CONSOLES = "115200;ttymxc0"
+
 MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen usbgadget usbhost vfat wifi"
 
 
