--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -9,6 +9,10 @@ MACHINE_NAME = "Verdin-iMX8MM"
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 
 require conf/machine/include/imx-base.inc
+# override imx-base.inc which sets this to cortexa53-crypto
+# if one wants cortexa53-crypto additionally change to include
+# conf/machine/include/arm/cortexa53-crypto.inc
+DEFAULTTUNE_mx8mm = "aarch64"
 require conf/machine/include/arm/arch-arm64.inc
 
 # Don't include kernels in standard images
