colibri-imx6ull: fix use-mainline-bsp
Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/machine/colibri-imx6ull.conf
+++ b/conf/machine/colibri-imx6ull.conf
@@ -10,10 +10,12 @@ include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa7.inc
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-toradex"
+PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp ??= "linux-toradex-mainline"
 KERNEL_DEVICETREE += " \
     imx6ull-colibri-eval-v3.dtb imx6ull-colibri-wifi-eval-v3.dtb \
     imx6ull-colibri-aster.dtb imx6ull-colibri-wifi-aster.dtb \
 "
+KERNEL_DEVICETREE_use-mainline-bsp = "imx6ull-colibri-eval-v3.dtb imx6ull-colibri-wifi-eval-v3.dtb"
 KERNEL_IMAGETYPE = "zImage"
 # The kernel lives in its own ubi volume.
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
