--- a/conf/machine/apalis-imx6.conf
+++ b/conf/machine/apalis-imx6.conf
@@ -13,7 +13,6 @@ PREFERRED_PROVIDER_virtual/kernel ??= "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp ??= "linux-fslc"
 KERNEL_DEVICETREE += "imx6q-apalis-eval.dtb imx6q-apalis-ixora.dtb \
                       imx6q-apalis-ixora-v1.1.dtb"
-KERNEL_DEVICETREE_use-mainline-bsp += "imx6q-apalis-ixora.dtb"
 KERNEL_IMAGETYPE = "zImage"
 # The kernel lives in a seperate FAT partition, don't deploy it in /boot/
 RDEPENDS_${KERNEL_PACKAGE_NAME}-base = ""
@@ -35,4 +34,5 @@ IMAGE_FSTYPES += "tar.xz"
 # wic support
 WKS_FILE = "sdimage-bootpart.wks"
 
-MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi bluetooth 3g pci"
+MACHINE_FEATURES += "screen usbgadget usbhost vfat ext2 alsa touchscreen wifi \
+                     bluetooth 3g pci"
