--- a/conf/machine/apalis-imx8.conf
+++ b/conf/machine/apalis-imx8.conf
@@ -27,6 +27,9 @@ UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "apalis-imx8_config,sdcard"
 
+UBOOT_ENTRYPOINT = "0x80280000"
+UBOOT_RD_LOADADDRESS = "0xA0000000"
+
 BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
