--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -31,6 +31,9 @@ UBOOT_SUFFIX = "bin"
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "colibri-imx8qxp_config,sdcard"
 
+UBOOT_ENTRYPOINT = "0x80280000"
+UBOOT_RD_LOADADDRESS = "0xA0000000"
+
 BOOT_SPACE = "65536"
 IMAGE_BOOTLOADER = "imx-boot"
 IMX_BOOT_SEEK = "32"
