verdin-imx8mm: use sdma firmware from linux-firmware
Use the sdma firmware from the linux-firmware recipe.

The firmware-imx recipe no longer provides it: meta-freescale commit
'abc7fdf4cefc firmware-imx: remove sdma-imx6q.bin and sdma-imx7d.bin'

Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
meta-freescale applied this also to the zeus branch, so:
(cherry picked from commit aec0425c37c452606b47fb547cd35ec189239965)

--- a/conf/machine/verdin-imx8mm.conf
+++ b/conf/machine/verdin-imx8mm.conf
@@ -54,7 +54,7 @@ MACHINE_FEATURES += "3g bluetooth alsa ext2 pci screen touchscreen usbgadget usb
 
 
 # Add additional firmware
-MACHINE_FIRMWARE_append = " linux-firmware-ath10k firmware-imx-sdma-imx7d"
+MACHINE_FIRMWARE_append = " linux-firmware-ath10k linux-firmware-imx-sdma-imx7d"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-toradex"
 PREFERRED_PROVIDER_virtual/kernel_preempt-rt = "linux-toradex-rt"
