--- a/conf/machine/apalis-imx6-mainline.conf
+++ b/conf/machine/apalis-imx6-mainline.conf
@@ -3,3 +3,5 @@ require conf/machine/apalis-imx6.conf
 include conf/machine/include/apalis-imx6.inc
 MACHINE_NAME = "Apalis-iMX6-Mainline"
 UBOOT_SUFFIX_use-mainline-bsp = "img"
+#override the setting in meta-freescale-3rdparty
+PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp = "linux-toradex-mainline"
