--- a/conf/machine/colibri-imx6-mainline.conf
+++ b/conf/machine/colibri-imx6-mainline.conf
@@ -3,3 +3,5 @@ require conf/machine/colibri-imx6.conf
 require conf/machine/include/colibri-imx6.inc
 MACHINE_NAME = "Colibri-iMX6-Mainline"
 UBOOT_SUFFIX_use-mainline-bsp = "img"
+#override the setting in meta-freescale-3rdparty
+PREFERRED_PROVIDER_virtual/kernel_use-mainline-bsp = "linux-toradex-mainline"
