firmware: update to 4.14.98 2.3.1
The seco firmware is now split out of firmware-imx.
The seco firmware has now a i.MX8X B0 and C0 silicon version.

Related-to: ELB-2351
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
(cherry picked from commit 78802e3ecd139a5031c06821526f249e060894c1)

--- a/conf/machine/colibri-imx8x.conf
+++ b/conf/machine/colibri-imx8x.conf
@@ -5,6 +5,7 @@
 
 MACHINE_NAME = "Colibri-iMX8X"
 
+# for C0 silicon add mx8qxpc0 to the right of mx8qxp
 MACHINEOVERRIDES =. "mx8:mx8x:mx8qxp:"
 MACHINEOVERRIDES_append_upstream = ":use-mainline-bsp"
 
